src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Allow_edits_by_community_users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow edits by community users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Dollars_Across_Rounds__c</fullName>
        <label>Total Dollars Across Series</label>
        <summarizedField>Round__c.Total_Committed__c</summarizedField>
        <summaryForeignKey>Round__c.Target_Company__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_NonVoting_Shares_Across_Series__c</fullName>
        <label>Total NonVoting Shares Across Series</label>
        <summarizedField>Round__c.Total_Committed_NonVoting_Shares__c</summarizedField>
        <summaryForeignKey>Round__c.Target_Company__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Shares_Across_Rounds__c</fullName>
        <label>Total Voting Shares Across Series</label>
        <summarizedField>Round__c.Total_Invest_Shares__c</summarizedField>
        <summaryForeignKey>Round__c.Target_Company__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sum_Shares_Across_Series__c</fullName>
        <label>Total Sum Shares Across Series</label>
        <summarizedField>Round__c.Total_Committed_Sum_Shares__c</summarizedField>
        <summaryForeignKey>Round__c.Target_Company__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>